tests/NormalTests/paczka1/fuzzy1/90953500.err
Error in line 6: S630 S768 59,3
Error in line 27: il3o S630 8,6
Error in line 38: LaDr A303 71,84
Error in line 37: b5EhgQy1DbW S630 32,8
